--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <!-- coding by @helpme_coder -->
-
+  
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smoke heart Sunfire Sensei</title>
+    <title>Will You Be Mine Forever</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <canvas id="heart"></canvas>
     <div class="smoke">
+      <span>Will You</span>
+      <span>&nbsp;</span>
       <span>Be</span>
       <span>&nbsp;</span>
-      <span>My</span>
-      <span>&nbsp;</span>
-      <span>Valentine</span>
+      <span>Mine Forever</span>
     </div>
 
     <script src="script.js"></script>
