--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
   <body>
     <canvas id="heart"></canvas>
     <div class="smoke">
-      <span>Will You</span>
+      <span>Will</span>
+      <span>&nbsp;</span>
+      <span>you</span>
+      <span>&nbsp;</span>
       <span>Be</span>
-      <span>Mine Forever</span>
+      <span>&nbsp;</span>
+      <span>Mine</span>
+      <span>&nbsp;</span>
+      <span>Forever</span>
     </div>
 
     <script src="script.js"></script>
